Reworked some stuff
Reworked how the server is run. May need to use a Thread, not sure. Will
mess around with it.